profile generator tested, working in both directions
not sure how to do test cases for something like this.

--- a/IndependentTests/IndependentTests.csproj
+++ b/IndependentTests/IndependentTests.csproj
@@ -59,6 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ControlSystemsTests\MotionProfileTests.cs" />
     <Compile Include="TimeoutInvokeTests.cs" />
     <Compile Include="ControlSystemsTests\OutputRateLimitTests.cs" />
     <Compile Include="ControlSystemsTests\SetpointProfileTests.cs" />
