--- a/SimulatorTests/SimulatorTests.csproj
+++ b/SimulatorTests/SimulatorTests.csproj
@@ -74,10 +74,11 @@
     <Compile Include="DriveTests\DriveTestBase.cs" />
     <Compile Include="DriveTests\TankDriveTests.cs" />
     <Compile Include="DriveTests\DriveEncodersTests.cs" />
-    <Compile Include="ExtrasTests\EnhancedDigitalInputTests.cs" />
-    <Compile Include="ExtrasTests\EnhancedEncoderTests.cs" />
-    <Compile Include="ExtrasTests\ManagedCompressorTests.cs" />
-    <Compile Include="ExtrasTests\RampMotorTests.cs" />
+    <Compile Include="ExtensionsTests\EnhancedDigitalInputTests.cs" />
+    <Compile Include="ExtensionsTests\EnhancedEncoderTests.cs" />
+    <Compile Include="ExtensionsTests\ManagedCompressorTests.cs" />
+    <Compile Include="ExtensionsTests\PistonTests.cs" />
+    <Compile Include="ExtensionsTests\RampMotorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimTestBase.cs" />
   </ItemGroup>
