added DriveHelper, identical to practice week 2015
Also, removed Get from all classes that use DeltaTime (derivative,
integral, etc) because I realized it breaks the calculations if called
outside of a strict usage context.

--- a/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
+++ b/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
@@ -62,6 +62,7 @@
     <Compile Include="ControlSystems\MotionProfile.cs" />
     <Compile Include="ControlSystems\MotionSetpoint.cs" />
     <Compile Include="ControlSystems\ProfileFollower.cs" />
+    <Compile Include="Drive\DriveHelper.cs" />
     <Compile Include="Drive\Interfaces\IEncoderDrive.cs" />
     <Compile Include="Drive\Interfaces\IGyroscopeDrive.cs" />
     <Compile Include="Drive\Interfaces\ISensorDrive.cs" />
