Added a message logger, having trouble with tests
mostly just the SmartDashboard test. I apparently need to initialize
that somehow. I wouldn't think I would need to use the simulator for
this.

--- a/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
+++ b/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
@@ -74,6 +74,7 @@
     <Compile Include="ControlSystems\SetPointProfile.cs" />
     <Compile Include="ControlSystems\SimplePID.cs" />
     <Compile Include="ControlSystems\MotionControlledSystem.cs" />
+    <Compile Include="Utility\Logger.cs" />
     <Compile Include="WPIExtensions\AnalogueUltrasonic.cs" />
     <Compile Include="Drive\DriveEncoders.cs" />
     <Compile Include="WPIExtensions\EnhancedDigitalInput.cs" />
